Simplify AddOpens by including them in the manifest file (#144)
* Simplify AddOpens by including them in the manifest file

* Add 2 new add opens to fix issues with gson.toJson as listed below:
Failed making field 'java.lang.ref.Reference#referent' accessible
Failed making field 'java.util.concurrent.locks.ReentrantLock#sync' accessible